# stream-flix-heroes

./: .gitignore  .setup-environment.sh  CMakeLists.txt  README.md
scripts/: 01_dbCreate.sql  02_tableCreate.sql  03_relationshipHeroApprentice.sql  04_relationshipHeroSkill.sql  05_insertHeroes.sql  06_insertApprentices.sql  07_demonstrate.sql  07_skills.sql  08_updateHero.sql  09_deleteApprentice.sql  streamflix.sql  streamflix_postgres.sql  streamflix_testdb.sql
src/: main.cpp
src/DataBase/: DatabaseRepository.hpp
src/Database/: DbConnection.cpp  DbConnection.hpp
src/Models/: Movie.cpp  Movie.hpp  User.cpp  User.hpp  UserReview.cpp  UserReview.hpp  UserSubscriptionType.hpp  WatchHistory.cpp  WatchHistory.hpp
src/Repositories/: BasicUserRepository.hpp  FreeUserRepository.hpp  GenericMovieRepository.cpp  GenericMovieRepository.hpp  GenericUserRepository.cpp  GenericUserRepository.hpp  GenericUserReviewRepository.cpp  GenericUserReviewRepository.hpp  GenericWatchHistoryRepository.cpp  GenericWatchHistoryRepository.hpp  IMovieRepository.hpp  IUserRepository.hpp  IUserReviewRepository.hpp  IWatchHistoryRepository.hpp  PremiumUserRepository.hpp
src/Services/: StreamflixService.cpp  StreamflixService.hpp
src/TestModels/: catch_amalgamated.cpp  catch_amalgamated.hpp  testModels.cpp
test/: test.cpp
test/Repositories/: Test_GenericUserRepository.hpp
